Implement judge node authentication.
