# BitWaves.JudgeBoard/Models/ChallengeResultModel.cs
@@ -1,0 +1,13 @@
+namespace BitWaves.JudgeBoard.Models
+{
+    /// <summary>
+    /// Provide data model for the result of a challenge operation.
+    /// </summary>
+    public sealed class ChallengeResultModel
+    {
+        /// <summary>
+        /// Get or set the JWT.
+        /// </summary>
+        public string Jwt { get; set; }
+    }
+}
