# BitWaves.JudgeBoard/docs/swagger/bitwaves-judgeboard-v1.yaml
@@ -7,6 +7,8 @@ info:
     email: msrlancern@126.com
 
 tags:
+  - name: auth
+    description: Judge node authentication related APIs
   - name: judges
     description: Judge node related APIs
   - name: submissions
@@ -15,6 +17,45 @@ tags:
     description: Problem archive related APIs
 
 paths:
+  /auth:
+    post:
+      summary: Create a new judge node authentication session
+      description: Create a new judge node authentication session
+      tags:
+        - auth
+      responses:
+        200:
+          description: Operation completed successfully
+          schema:
+            $ref: '#/definitions/AuthenticationSession'
+
+  /auth/{sessionId}:
+    patch:
+      summary: Challenge an existing authentication session and get JWT
+      description: Challenge an existing authentication session and get JWT
+      tags:
+        - auth
+      parameters:
+        - in: path
+          name: sessionId
+          type: string
+          required: true
+          description: ID of the authentication session previously created by the `POST /auth` API
+        - in: body
+          name: challenge
+          description: The challenge message in base-64 encoding
+          schema:
+            type: string
+      responses:
+        200:
+          description: Operation completed successfully
+          schema:
+            $ref: '#/definitions/ChallengeResult'
+        400:
+          description: Bad request data
+        401:
+          description: The challenge is not successful
+
   /judges:
     get:
       summary: Get all active judge nodes online
@@ -124,6 +165,30 @@ paths:
           description: No such archive.
 
 definitions:
+  AuthenticationSession:
+    type: object
+    required:
+      - id
+      - challenge
+    properties:
+      id:
+        type: string
+        description: ID of this authentication session
+        example: "502643ba-2a48-49cc-b775-3cc3880776ba"
+      challenge:
+        type: string
+        description: A base-64 encoded challenge messages
+        example: "CCl+CSSmsQA7zH7lUQD0fQ=="
+
+  ChallengeResult:
+    type: object
+    required:
+      - jwt
+    properties:
+      jwt:
+        type: string
+        description: The JWT for authenticating the judge node
+
   HeartbeatInfo:
     type: object
     required:
